Chore: Går igjennom input validering og fikser feil og mangler + optimize imports